# stl-web-viewer

./: .gitignore  AGENTS.md  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml  test.yml
public/: main.css
src/: main.ts  not-atan.test.ts  not-atan.ts  split-geometry.test.ts  split-geometry.ts  stupid-microbenchmark.ts  triangle-normals.test.ts  triangle-normals.ts
wasm/: CMakeLists.txt  Cargo.toml  install-build-deps.sh  run-build.sh  rustfmt.toml
wasm-cpp/: CMakeLists.txt
wasm-cpp/src/: benchmark.cpp  common.h
wasm-rs/: Cargo.toml  run-build.sh  rustfmt.toml
wasm-rs/src/: lib.rs
wasm/src/: benchmark.rs  bindings.cpp  lib.rs  not-atan.cpp  not-atan.h  not_atan.rs  split-geometry.cpp  split-geometry.h  split_geometry.rs  util.rs  vector3.h  vector3.rs
